# locos

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  LICENSE-assets.md  Makefile  README.md  REPRODUCING.md  pyproject.toml  vulture_whitelist.py
.github/workflows/: pages.yml
deploy/: README.md  cancel_affected_jobs.sh  generate_consensus_ablation.sh  generate_experiments.py  interactive.yaml  job_config.sh  launch_evals.sh  launch_multi_ns.sh  model_sampling.yaml  namespaces.conf  namespaces.legacy.conf  run_missing_ablations.sh
deploy/jobs/: README.md  ablation_niah.sh  ablation_niah_consensus.sh  ablation_niah_random.sh  ablation_nolima.sh  ablation_nolima_bottomk.sh  ablation_nolima_consensus.sh  ablation_nolima_random.sh  ablation_parametric.sh  ablation_parametric_bottomk.sh  ablation_parametric_random.sh  detect_attention_spatial.sh  detect_contrastive.sh  detect_cri.sh  detect_dla.sh  detect_headkv.sh  detect_logit_contrib.sh  detect_logit_contrib_tuned_lens.sh  detect_retrieval_heads.sh  eval_aci_bench.sh  eval_babilong.sh  eval_longbench_v2.sh  eval_medrag.sh  eval_musique.sh  eval_nq_swap.sh  eval_xsum.sh
examples/: ablate_generation.py
experiments/: manifest.yaml
locos/: README.md  download_haystack_data.py
locos/analysis/: _utils.py  alpha_spatial.py  babilong_errors.py  benchmark_literality.py  compare_heads.py  consensus_heads.py  direct_path_bias.py  e1_alpha_spatial.py  e2_topk_overlap.py  e3_provenance.py  e4_nonliterality.py  e5_benchmark_literality.py  e6_babilong_errors.py  e7_factorial.py  e7_gemma27b_lens.py  factorial.py  gemma27b_lens.py  inventory.py  kv_group_analysis.py  nolima_ablation.py  nonliterality.py  parametric_ablation.py  provenance.py  topk_overlap.py  tuned_lens_comparison.py
locos/detectors/: attention_spatial.py  behavioral.py  contrastive.py  cri.py  dla.py  headkv.py  logit_contrib.py
locos/notebooks/: locos_nnsight.py
locos/plotting/: _downstream_bar_common.py  _downstream_common.py  _paths.py  ablation_comparison.py  babilong_bar.py  consensus_ablation_niah_vs_nolima.py  medrag_bar.py  (+15 more)
locos_eval/: __init__.py  ablation.py  attention.py  retrieval_heads.py  rpc_ops.py  state.py  wrapper.py
notebooks/: locos_demo.ipynb
scripts/: check_experiment.py  download_heads.py  reorganize_hf_repo.py  sync_results.py  upload_results.py
tests/: test_ablation.py  test_ablation_comparison.py  test_ablation_helpers.py  test_analysis_utils.py  test_attention.py  test_attention_spatial.py  test_build_tracked_prompt.py  test_check_experiment.py  test_consensus_heads.py  test_datasets.py  test_detect_cri.py  test_detect_retrieval_heads.py  test_direct_path_bias.py  test_dissociation_score.py  test_dla.py  test_downstream_bar_common.py  test_eval_runner.py  test_eval_tasks.py  test_experiment_key.py  test_first_token_logit_delta.py  test_headkv.py  test_heatmap_comparison.py  test_kv_group_analysis.py  test_locos_niah_vs_nolima.py  test_logit_contrib.py  test_manifest.py  test_retrieval_heads.py  test_rpc_ops.py  test_scorers.py  test_standalone_surface.py  test_state.py  test_sync_results.py  test_tuned_lens_correction.py
web/: index.html
(+47 files in other folders)
