[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Pinned to cu12-compatible releases. torch>=2.11 and vllm>=0.19 ship
    # cu13 wheels by default, while this project targets CUDA 12.x wheels.
    # vllm 0.18.x requires torch==2.10.0; upper bound raised to allow 2.10.x.
    # Install with: --extra-index-url https://download.pytorch.org/whl/cu128
    "vllm>=0.18,<0.19",
    "torch>=2.6,<2.11",
    "numpy",
    "transformers",
    "accelerate",
    "huggingface-hub",
    "hf_transfer",
    "pyyaml",
    "rich",
    "seaborn",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "pre-commit",
    "ruff",
    "black",
    "isort",
    "vulture",
]
eval = ["datasets>=3.0", "rouge-score", "bert-score", "tqdm"]

[tool.setuptools.packages.find]
where = ["."]
include = ["locos_eval*", "locos*"]

[tool.setuptools.package-data]
locos = ["analysis/prompts/*.yaml"]
locos_eval = ["evals/configs/*.yaml", "evals/prompts/*.yaml"]

[tool.pytest.ini_options]
markers = [
    "gpu: tests that require a GPU (deselect with '-m not gpu')",
]

[tool.coverage.run]
source = ["locos", "locos_eval", "scripts"]
omit = [
    "locos/notebooks/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

# --- Linting & Formatting ---

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["locos_eval", "locos", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    # Note: "I" (isort) disabled — standalone isort handles import sorting
    # to avoid conflicts between ruff's isort and standalone isort.
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",    # line too long (black handles this)
    "E741",    # ambiguous variable name (l, O, I) — common in ML for layer/index
    "B905",    # zip strict (requires Python 3.10+, but we have 3.11 so optional)
    "SIM108",  # ternary operator (sometimes less readable)
    "RUF001",  # ambiguous Unicode in strings (×, −, etc.) — math notation is intentional
    "RUF002",  # ambiguous Unicode in docstrings (α, ×, etc.) — math notation is intentional
    "RUF003",  # ambiguous Unicode in comments — math notation is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]           # test files often import after setup/mocking
"scripts/**" = ["E402"]         # scripts may manipulate sys.path before imports
"locos/**" = ["E402"]  # detector scripts have conditional imports

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["locos_eval", "locos"]

[tool.vulture]
min_confidence = 80
paths = ["locos_eval", "locos", "vulture_whitelist.py"]
exclude = [".venv", "build", "dist"]
